--- a/app/src/main/res/layout/activity_b1.xml
+++ b/app/src/main/res/layout/activity_b1.xml
@@ -8,7 +8,7 @@
     android:visibility="visible">
 
     <Button
-        android:id="@+id/VFMenu0"
+        android:id="@+id/b1_Menu0"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,16 +18,16 @@
         android:drawableEnd="@drawable/right_arrow"
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
-        android:onClick="VF0Listener"
+        android:onClick="B1_0Listener"
         android:padding="20dip"
-        android:text="@string/VFMenu0"
+        android:text="@string/b1_Menu1"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/VFMenu1"
+        app:layout_constraintBottom_toTopOf="@+id/b1_Menu1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/VFMenu1"
+        android:id="@+id/b1_Menu1"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,16 +37,16 @@
         android:drawableEnd="@drawable/right_arrow"
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
-        android:onClick="VF1Listener"
+        android:onClick="B1_1Listener"
         android:padding="20dip"
-        android:text="@string/VFMenu1"
+        android:text="@string/b1_Menu2"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/VFMenu2"
+        app:layout_constraintBottom_toTopOf="@+id/b1_Menu2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/VFMenu2"
+        android:id="@+id/b1_Menu2"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,14 +59,14 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VFMenu2"
+        android:text="@string/b1_Menu3"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/VFMenu3"
+        app:layout_constraintBottom_toTopOf="@+id/b1_Menu3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/VFMenu3"
+        android:id="@+id/b1_Menu3"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         android:drawableRight="@drawable/right_arrow"
         android:gravity="start|center_vertical"
         android:padding="20dip"
-        android:text="@string/VFMenu3"
+        android:text="@string/b1_Menu4"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
